service-mesh/api-gateway-routes.virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway-routes
spec:
  hosts:
    - "*"
  gateways:
    - order-app-gateway
  http:
    - match:
        - uri:
            prefix: /customers
      route:
        - destination:
            host: customer-service
            port:
              number: 9000
    - match:
        - uri:
            prefix: /orders
      route:
        - destination:
            host: order-service
            port:
              number: 9001
    - match:
        - uri:
            prefix: /products
      route:
        - destination:
            host: product-service
            port:
              number: 9002
