service-mesh/customer-service-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-service
spec:
  hosts:
    - "*"
  gateways:
    - order-app-gateway
  http:
    - match:
        - uri:
            prefix: /customers
      route:
        - destination:
            host: customer-service
            port:
              number: 9000
